syntax = "proto3";
package sentinel.deposit.types;

option go_package = "github.com/sentinel-official/hub/x/deposit/types";

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "github.com/sentinel-official/hub/x/deposit/types/deposit.proto";

message QueryDepositsRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryDepositRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string address = 1;
}

message QueryDepositsResponse {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  repeated Deposit deposits = 1 [
    (gogoproto.nullable) = false
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryDepositResponse {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  Deposit deposit = 1 [
    (gogoproto.nullable) = false
  ];
}

service Query {
  rpc Deposits(QueryDepositsRequest) returns(QueryDepositsResponse) {
    option (google.api.http).get = "/deposits";
  }

  rpc Deposit(QueryDepositRequest) returns(QueryDepositResponse) {
    option (google.api.http).get = "/deposits/{address}";
  }
}
